--- a/MVCapp/Project_Readme.html
+++ b/MVCapp/Project_Readme.html
@@ -102,7 +102,7 @@
 
     <div id="main">
         <div class="section first">
-            <h2>This application consists of:</h2>
+            <div class="h2">This application consists of:</div>
             <ul>
                 <li>Sample pages showing basic nav between Home, About, and Contact</li>
                 <li>Theming using <a href="http://go.microsoft.com/fwlink/?LinkID=615519">Bootstrap</a></li>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="section">
-            <h2>Customize app</h2>
+            <div class="h2">Customize app</div>
             <ul>
                 <li><a href="http://go.microsoft.com/fwlink/?LinkID=615541">Get started with ASP.NET MVC</a></li>
                 <li><a href="http://go.microsoft.com/fwlink/?LinkID=615523">Change the site's theme</a></li>
@@ -130,7 +130,7 @@
         </div>
 
         <div class="section">
-            <h2>Deploy</h2>
+            <div class="h2">Deploy</div>
             <ul>
                 <li><a href="http://go.microsoft.com/fwlink/?LinkID=615534">Ensure your app is ready for production</a></li>
                 <li><a href="http://go.microsoft.com/fwlink/?LinkID=615535">Microsoft Azure</a></li>
@@ -139,7 +139,7 @@
         </div>
 
         <div class="section last">
-            <h2>Get help</h2>
+            <div class="h2">Get help</div>
             <ul>
                 <li><a href="http://go.microsoft.com/fwlink/?LinkID=615537">Get help</a></li>
                 <li><a href="http://go.microsoft.com/fwlink/?LinkID=615538">Get more templates</a></li>
